--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -4,15 +4,15 @@
   border-color: #158749 !important;
 }
 .hero-callout .btn {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 .hero-callout .btn-success {
-    background-color: #158749;
-    border-color: #158749;
+  background-color: #158749;
+  border-color: #158749;
 }
 .hero-callout .btn-success:hover {
-    background-color: #189c54;
-    border-color: #189c54;
+  background-color: #189c54;
+  border-color: #189c54;
 }
 .hero-callout .btn-blue {
   background-color: #1a5981;
@@ -27,4 +27,30 @@
 }
 .display-4 {
   font-size: 2rem;
+}
+/* footer styling */
+footer {
+  background: #2276ac;
+  color: white;
+  padding: 1em 2em;
+}
+footer a:link,
+footer a:visited {
+  color: white;
+}
+footer ul {
+  margin: 0.25em 0;
+  padding: 0;
+}
+footer ul li {
+  display: inline;
+}
+footer ul li:not(:first-child):before {
+  content: "\b7";
+  margin: 0 0.5em;
+}
+footer .badge {
+  background-color: #2c3e50;
+  position: relative;
+  top: -2px;
 }
