--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -1,29 +1,5 @@
-.badge-beta {
-  margin-left: 15px;
-  background-color: #158749 !important;
-  border-color: #158749 !important;
-}
 .hero-callout .btn {
   margin-right: 15px;
-}
-.hero-callout .btn-success {
-  background-color: #158749;
-  border-color: #158749;
-}
-.hero-callout .btn-success:hover {
-  background-color: #189c54;
-  border-color: #189c54;
-}
-.hero-callout .btn-blue {
-  background-color: #1a5981;
-  border-color: #1a5981;
-}
-.hero-callout .btn-blue:hover {
-  background-color: #1e6896;
-  border-color: #1e6896;
-}
-.navbar-dark .navbar-nav .nav-link {
-  color: white !important;
 }
 .display-4 {
   font-size: 2rem;
@@ -37,6 +13,7 @@ footer {
 footer a:link,
 footer a:visited {
   color: white;
+  background: #2276ac;
 }
 footer ul {
   margin: 0.25em 0;
@@ -53,4 +30,142 @@ footer .badge {
   background-color: #2c3e50;
   position: relative;
   top: -2px;
+}
+/* end of footer styling */
+.home.container ul {
+  margin-top:.5em;
+}
+.home.container ul {
+  margin-bottom:0.20em;
+}
+.home.container ul {
+  list-style: none;
+}
+.home.container ul li {
+  line-height: 25px;
+}
+.home.container ul li:before {
+  content: "•";
+  font-size: 220%;
+  padding-right: .5em;
+  padding-left:.5em;
+  vertical-align:bottom;
+}
+.fa-info-circle, a:visited, a:link {
+  color:#2276ac;
+}
+.fa-info-circle {
+  padding-left:5px;
+}
+a:link.ext:after, a:visited.ext:after {
+  display: inline-block;
+  padding-left: 0.3em;
+  font-family: "EUI-Icon-Library";
+  content: "\f111";
+}
+/* button styles taken from juanisa's adobe document as directed */
+.btn-dark-blue{
+  background: #195983 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border: 1px solid #70707040;
+  border-radius: 8px;
+  opacity: 1;
+}
+.btn-green {
+  background: #158749 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border: 1px solid #70707040;
+  border-radius: 8px;
+  opacity: 1;
+}
+.btn-green img {
+  margin-left:10px;
+}
+.btn-green:hover {
+  background: #158749!important;
+  filter: contrast(2.75)!important;
+}
+.btn-dark-blue:hover {
+  background: #195983!important;
+  filter: contrast(1.35)!important;
+}
+.btn-transparant:hover {
+  background: #195983!important;
+  filter: contrast(1.35)!important;
+}
+.badge-green {
+  margin-left:10px;
+  margin-bottom: 5px;
+}
+.badge-white {
+  background-color: #f8f9fa;
+  color:#2276ac;
+  margin-left:10px;
+  margin-bottom: 5px;
+}
+.btn-transparant {
+  background: #2877AA 0% 0% no-repeat padding-box;
+  border: 2px solid #FFFFFF;
+  border-radius: 8px;
+  opacity: 1;
+}
+.header.row.pt-5{
+  margin-right: calc(2rem * 2);
+  margin-left: calc(5rem * 2);
+}
+@media (min-width: 250px) {
+  .navbar {
+    width: 100%;}
+  .container-lg,
+  .row {
+    --bs-gutter-x: unset } 
+  #earthdata-tophat2 {
+    overflow: hidden } 
+}
+@media (max-width: 1200px) {
+  .header.row.pt-5{
+    margin-right: 1rem;
+    margin-left: 1rem;}}
+
+.display-4.main-width hr{
+  margin: 1rem -50px 0;
+}
+.card-grid {
+  display: inline-grid;
+  grid-gap: 10px;
+  grid-template-columns: auto auto auto;
+  text-align: center;
+  justify-content: space-between; /* justify items */
+  margin-top:.75rem;
+  margin-bottom:.5rem;
+}
+.home.container{
+  padding-bottom:2rem;
+}
+.home.container h1{
+  padding-top:1rem;
+}
+html {
+  clear: both;
+  margin: 0 auto 3rem auto;
+  width: 1200px;
+  height: auto;
+  background-color: #FCFCFC;
+  box-shadow: 0px 0px 25px #555;
+}
+.fa.fa-external-link-alt{
+  margin-right:10px;
+}
+.fa.fa-info-circle {
+  cursor:pointer;
+}
+.home-bottom-grid {
+  display: inline-grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: left;
+  margin-top:2rem;
+  align-items: center;
+  justify-items: center;
+  margin-bottom:.5rem;
 }
