--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -5,7 +5,7 @@
 .eui-fa-chevron-circle-down {
   color: #2276ac;
 }
-.container-grid:not(:has(.left-content.collapsed)) {
+.container-grid:not(.left-collapsed) {
   display: inline-grid;
   grid-template-columns: 250px auto;
   justify-content: space-between; /* justify items */
@@ -22,25 +22,6 @@
   display: block;
   width: 0px;
   height: 0px;
-}
-.home ul,
-.producer ul,
-.how_to_use_edpub ul {
-  list-style: none;
-}
-.home ul li,
-.producer ul li,
-.how_to_use_edpub ul li {
-  line-height: 25px;
-}
-.home ul li:before,
-.producer ul li:before,
-.how_to_use_edpub ul li:before {
-  content: "•";
-  font-size: 220%;
-  padding-right: .5em;
-  padding-left:.5em;
-  vertical-align:bottom;
 }
 .fa-info-circle, a:visited, a:link {
   color:#2276ac;
@@ -134,11 +115,25 @@ a:link.ext:after, a:visited.ext:after {
   margin-top:.75rem;
   margin-bottom:.5rem;
 }
-.card-grid .card:has(.icon_div) {
+.card-grid .card.has-icon {
   min-height:8em;
-  padding-top:3rem;
   margin-bottom:2rem;
   margin-top:2rem;
+}
+.card .icon_div {
+  background: #2877AA 0% 0% no-repeat padding-box;
+  width: 3.75rem;
+  height: 3.75rem;
+  border-radius:50%;
+  padding:.5rem;
+  position:absolute;
+  top:-2rem;
+  left:7.15rem;
+}
+.card .icon {
+  opacity: 1; 
+  width: 100%;
+  height: 100%;
 }
 html {
   clear: both;
@@ -159,25 +154,6 @@ html {
 }
 .version{
   background-color: #195983;
-}
-.box_link:has(.card) {
-  color:black;
-  text-decoration:none;
-}
-.card .icon_div {
-  background: #2877AA 0% 0% no-repeat padding-box;
-  width: 3.75rem;
-  height: 3.75rem;
-  border-radius:50%;
-  padding:.5rem;
-  position:absolute;
-  top:-2rem;
-  left:7.15rem;
-}
-.card .icon {
-  opacity: 1; 
-  width: 100%;
-  height: 100%;
 }
 .btn-to-top {
   width: 80px;
