--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -3,7 +3,7 @@
 }
 .eui-fa-chevron-circle-up,
 .eui-fa-chevron-circle-down {
-  color: #2276ac;
+  color: #2276ac!important;
 }
 .container-grid:not(.left-collapsed) {
   display: inline-grid;
@@ -12,7 +12,7 @@
   width: 100%;
 }
 .container-grid .left-content {
-  background: #2275AA;
+  background: #2275AA!important;
   min-height:100%;
   color:white;
   width: 250px;
@@ -24,31 +24,31 @@
   height: 0px;
 }
 .fa-info-circle, a:visited, a:link {
-  color:#2276ac;
+  color:#2276ac!important;
 }
 .fa-info-circle {
   padding-left:5px;
   cursor:pointer;
 }
 a:link.ext:after, a:visited.ext:after {
-  display: inline-block;
-  padding-left: 0.3em;
-  font-family: "EUI-Icon-Library";
-  content: "\f111";
+  display: inline-block!important;
+  padding-left: 0.3em!important;
+  font-family: "EUI-Icon-Library"!important;
+  content: "\f111"!important;
 }
 /* button styles taken from juanisa's adobe document as directed */
 .btn-dark-blue{
-  background: #195983 0% 0% no-repeat padding-box;
-  box-shadow: 0px 3px 6px #00000029;
-  border: 1px solid #70707040;
-  border-radius: 8px;
+  background: #195983 0% 0% no-repeat padding-box!important;
+  box-shadow: 0px 3px 6px #00000029!important;
+  border: 1px solid #70707040!important;
+  border-radius: 8px!important;
   opacity: 1;
 }
 .btn-green {
-  background: #158749 0% 0% no-repeat padding-box;
-  box-shadow: 0px 3px 6px #00000029;
-  border: 1px solid #70707040;
-  border-radius: 8px;
+  background: #158749 0% 0% no-repeat padding-box!important;
+  box-shadow: 0px 3px 6px #00000029!important;
+  border: 1px solid #70707040!important;
+  border-radius: 8px!important;
   opacity: 1;
 }
 .btn-green img {
@@ -70,14 +70,14 @@ a:link.ext:after, a:visited.ext:after {
   margin-left:10px;
 }
 .badge-white {
-  background-color: #f8f9fa;
-  color:#2276ac;
+  background-color: #f8f9fa!important;
+  color:#2276ac!important;
   margin-left:10px;
 }
 .btn-transparant {
-  background: #2877AA 0% 0% no-repeat padding-box;
-  border: 2px solid #FFFFFF;
-  border-radius: 8px;
+  background: #2877AA 0% 0% no-repeat padding-box!important;
+  border: 2px solid #FFFFFF!important;
+  border-radius: 8px!important;
   opacity: 1;
 }
 .header.row.pt-5{
@@ -107,11 +107,11 @@ a:link.ext:after, a:visited.ext:after {
   margin: 1rem -48px 0;
 }
 .card-grid {
-  display: inline-grid;
-  grid-gap: 10px;
-  grid-template-columns: auto auto auto;
-  text-align: center;
-  justify-content: space-between; 
+  display: inline-grid!important;
+  grid-gap: 10px!important;
+  grid-template-columns: auto auto auto!important;
+  text-align: center!important;
+  justify-content: space-between!important; 
   margin-top:.75rem;
   margin-bottom:.5rem;
 }
@@ -121,7 +121,7 @@ a:link.ext:after, a:visited.ext:after {
   margin-top:2rem;
 }
 .card .icon_div {
-  background: #2877AA 0% 0% no-repeat padding-box;
+  background: #2877AA 0% 0% no-repeat padding-box!important;
   width: 3.75rem;
   height: 3.75rem;
   border-radius:50%;
@@ -140,8 +140,8 @@ html {
   margin: 0 auto 3rem auto;
   width: 1450px;
   height: auto;
-  background-color: #FCFCFC;
-  box-shadow: 0px 0px 25px #555;
+  background-color: #FCFCFC!important;
+  box-shadow: 0px 0px 25px #555!important;
 }
 .fa.fa-external-link-alt{
   margin-right:10px;
@@ -153,7 +153,7 @@ html {
   text-decoration: underline;
 }
 .version{
-  background-color: #195983;
+  background-color: #195983!important;
 }
 .btn-to-top {
   width: 80px;
@@ -161,10 +161,10 @@ html {
   border-radius: 50%; 
   scroll-behavior: unset;
   border: 1px solid #70707040;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-  box-shadow: 0px 3px 6px #00000029;
+  background: #FFFFFF 0% 0% no-repeat padding-box!important;
+  box-shadow: 0px 3px 6px #00000029!important;
   opacity: 1;
 }
 .btn-to-top-text {
-  color:#2276ac;
+  color:#2276ac!important;
 }
