--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -146,7 +146,7 @@ html {
 .fa-external-link-alt:before {
   content: "\f35d"!important;
 }
-.fa.fa-external-link-alt{
+.fas.fa-external-link-alt{
   margin-right:10px;
 }
 .nav-item{
