--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -83,9 +83,12 @@ a:link.ext:after, a:visited.ext:after {
   border-radius: 8px;
   opacity: 1;
 }
-.header.row.pt-5{
-  margin-right: calc(5rem * 2);
-  margin-left: calc(5rem * 2);
+.header.row.pt-5, .header.row.pt-4{
+  margin-right: calc(4rem * 2);
+  margin-left: calc(4rem * 2);
+}
+.pt-5 {
+  padding-top: 2.25rem !important;
 }
 .navbar {
   border-bottom:unset!important;
@@ -97,7 +100,11 @@ a:link.ext:after, a:visited.ext:after {
   margin-left:2rem;
 }
 .hero-callout {
-  /* border-top:unset!important;*/
+  background-image: url('@/assets/earth-blue-overlay-cropped-40.png');
+  background-repeat: no-repeat;
+  /*background-attachment: fixed;
+  background-position: center;
+  background-size: 1120px;*/
 }
 .navbar div a {
   white-space: break-spaces;
