--- a/src/assets/styles/eui.css
+++ b/src/assets/styles/eui.css
@@ -7411,10 +7411,10 @@ section {
   background: #fff; }
 
 .navbar {
-  /*border-bottom: 1px solid rgba(0, 0, 0, 0.1); }*/
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
 
 .hero-callout {
-  /*border-top: 1px solid rgba(255, 255, 255, 0.2); */
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .navbar-brand.nasa {
