--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -114,6 +114,9 @@ a:link.ext:after, a:visited.ext:after {
   background-position: center;
   background-size: 1120px;*/
 }
+.table>:not(:last-child)>:last-child>* {
+  border-bottom-color: unset!important;
+}
 .navbar div a {
   white-space: break-spaces;
 }
@@ -299,7 +302,7 @@ table .publication {
 .role,
 .post,
 th {
-  text-align:center;
+  text-align:center!important;
   vertical-align: initial;
 }
 table th:first-child {
@@ -307,11 +310,57 @@ table th:first-child {
   border-bottom:1px solid grey;
 }
 table th:last-child {
-  border-bottom:1px solid grey;
+  /* border-bottom:1px solid grey; */
 }
 .subheader {
   border-right:1px solid grey;
 }
 h1, h2, h3 {
   margin-bottom:0!important;
+}
+#getting-started-hero .heading {
+  text-align: center;
+  position:relative;
+  top:-15px;
+}
+#getting-started-hero p {
+  text-align: start;
+  padding-left:15px;
+  padding-right:15px;
+}
+/* .card {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border: 1px solid #074872;
+  border-radius: 8px;
+  opacity: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+} */
+#getting-started-hero .card {
+  /* background-color:#ebebeb;*/
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  /* background-color: #fff; */
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: 0.25rem;
+  opacity: .8;
+  background: #fff 0 0 no-repeat padding-box;
+  box-shadow: 0 3px 6px #00000029;
+  border: 1px solid #70707040;
+  border-radius: 8px;
+}
+#getting-started-hero .right-card {
+  background: #EFEFEF 0 0 no-repeat padding-box;
+  color: black;
+}
+#getting-started-hero {
+  margin-bottom: 1rem!important;
 }
