--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -336,8 +336,15 @@ h1, h2, h3 {
   background: #EFEFEF 0 0 no-repeat padding-box!important;
   color: black!important;
 }
-.table>:not(caption)>*>* {
-  border-bottom-width: unset!important;
+table.table.table-striped {
+  border: 1px solid #ebebeb;
+  border-radius: 8px;
+}
+th, thead, tr {
+  border-style: unset!important;
+}
+th {
+  border-bottom: unset!important;
 }
 #getting-started-hero {
   margin-bottom: 1rem!important;
