--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -367,3 +367,6 @@ th.publication {
   border-top: 1px solid #ebebeb!important;
   border-right: 1px solid #ebebeb!important;
 }
+table.table.table-striped td {
+  border-right: 1px solid #ebebeb!important;
+}
