--- a/src/assets/styles/edpub.css
+++ b/src/assets/styles/edpub.css
@@ -95,7 +95,7 @@ a:link.ext:after, a:visited.ext:after {
   margin-right: calc(4rem * 2)!important;
   margin-left: calc(4rem * 2)!important;
 }
-.pt-5, #getting-started-hero .pt-5 {
+#getting-started-hero .pt-5 {
   padding-top: 1.25rem!important;
 }
 
@@ -305,9 +305,7 @@ th {
 h1, h2, h3 {
   margin-bottom:0!important;
 }
-h1:first-child {
-  margin-top:1rem;
-}
+
 #getting-started-hero .heading {
   text-align: center!important;
   position:relative!important;
